syntax = "proto3";

package status.v1;

import "validate/validate.proto";

// VersionRequest returns the running version of the service
message VersionResponse {
  string git_ref = 1 [(validate.rules).string.min_bytes = 1];
}

message VersionRequest {}
